# sms-formats

./: .gitlab-ci.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: validate.yml
docs/: transaction_sms_entities_extraction_guide.md  transaction_sms_regex_writing_guide.md
scripts/: diff.py
server/: Dockerfile  models.py  request_process_sms.py  requirements.txt
src/ABB-az_15718/: senders.txt
src/ABN Amro-nl_15540/: senders.txt
src/ABSA Bank-za_15566/: senders.txt
src/ADCB-ae_15521/: senders.txt
src/ADIB-ae_15582/: senders.txt
src/AIK Banka-rs_15974/: senders.txt
src/ALTA Banka-rs_15979/: senders.txt
src/AMIO BANK-am_16043/: senders.txt
src/ANOR BANK-uz_15968/: senders.txt
src/Adriatic Bank-me_15885/: senders.txt
src/Agibank-br_15926/: senders.txt
src/Agribank-vn_16032/: senders.txt
src/Aktia-fi_16029/: senders.txt
src/Al Hilal Bank-ae_16012/: senders.txt
src/Al Maryah Community Bank-ae_15975/: senders.txt
src/Al Masraf-ae_15766/: senders.txt
src/AlRajhi Bank-sa_16021/: senders.txt
src/Alat by Wema-ng_15683/: senders.txt
src/Alatau City Bank-kz_15501/: senders.txt
src/Alinma Bank-sa_15586/: senders.txt
src/Alior Bank-pl_15687/: senders.txt
src/Aloqabank-uz_15593/: senders.txt
src/Alpha Bank-ro_15623/: senders.txt
src/Altyn Bank-kz_15474/: senders.txt
src/Altyn-i Bank-kz_15556/: senders.txt
src/Ameriabank-am_15472/: senders.txt
src/American Express-sg_16010/: senders.txt
src/American Express-us_15598/: senders.txt
src/Ancoria Bank-cy_15615/: senders.txt
src/Apibank-rs_15986/: senders.txt
(+6215 files in other folders)
