[project]
name = "sms-formats"
version = "0.1.0"
description = "SMS parsing formats and sender lists"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, Pyflakes, isort

[tool.ruff.lint.per-file-ignores]
"scripts/generate_sms_format.py" = ["E501"]
